[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/scripts/Root.gd" type="Script" id=1]
[ext_resource path="res://assets/img/PngItem_1352730.png" type="Texture" id=2]
[ext_resource path="res://assets/scenes/Game.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/img/pngaaa.com-1635000.png" type="Texture" id=4]
[ext_resource path="res://assets/img/heart pixel art 254x254.png" type="Texture" id=5]
[ext_resource path="res://assets/font/Minecraft.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/scenes/Label.gd" type="Script" id=7]
[ext_resource path="res://TextboxRPG.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[node name="Root" type="Node"]
script = ExtResource( 1 )

[node name="Game" parent="." instance=ExtResource( 3 )]

[node name="Node" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="Node"]
margin_left = 11.0
margin_top = 8.0
margin_right = 113.0
margin_bottom = 98.0
color = Color( 0.341176, 0.243137, 0.243137, 0.662745 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextboxRPG" parent="Node" instance=ExtResource( 8 )]
text = "BONJOUR, BIENVENUE DANS LE MONDE DE TICKET-UP, VOUS AVEZ 3 NOUVELLES QUETES ET ETES ACTUELLEMENT LVL 50, BON JEU !"

[node name="VBoxContainer" type="VBoxContainer" parent="Node"]
margin_left = 23.0
margin_top = 16.0
margin_right = 103.0
margin_bottom = 95.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Node/VBoxContainer"]
margin_right = 80.0
margin_bottom = 20.0
rect_clip_content = true

[node name="TextureRect" type="TextureRect" parent="Node/VBoxContainer/HBoxContainer"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="Node/VBoxContainer/HBoxContainer"]
margin_left = 24.0
margin_right = 80.0
margin_bottom = 20.0
size_flags_horizontal = 7
size_flags_vertical = 5
custom_fonts/font = SubResource( 1 )
text = "3 /3 "
valign = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Node/VBoxContainer"]
margin_top = 24.0
margin_right = 80.0
margin_bottom = 44.0

[node name="TextureRect" type="TextureRect" parent="Node/VBoxContainer/HBoxContainer2"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
rect_clip_content = true
size_flags_horizontal = 12
size_flags_vertical = 12
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="Node/VBoxContainer/HBoxContainer2"]
margin_left = 24.0
margin_right = 72.0
margin_bottom = 20.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "12 000"
valign = 2
script = ExtResource( 7 )

[node name="Tween" type="Tween" parent="Node/VBoxContainer/HBoxContainer2"]

[node name="HBoxContainer3" type="HBoxContainer" parent="Node/VBoxContainer"]
margin_top = 48.0
margin_right = 80.0
margin_bottom = 68.0

[node name="TextureRect" type="TextureRect" parent="Node/VBoxContainer/HBoxContainer3"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
rect_clip_content = true
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="Node/VBoxContainer/HBoxContainer3"]
margin_left = 24.0
margin_top = 2.0
margin_right = 80.0
margin_bottom = 18.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "LVL 50"
align = 1
valign = 1

[connection signal="leaderboard_gui_open_from_game" from="Game" to="." method="_on_Game_leaderboard_gui_open_from_game"]
[connection signal="quest_gui_open_from_game" from="Game" to="." method="_on_Game_quest_gui_open_from_game"]
[connection signal="shop_gui_open_from_game" from="Game" to="." method="_on_Game_shop_gui_open_from_game"]
